--- a/jenkinsfile
+++ b/jenkinsfile
@@ -18,7 +18,7 @@ pipeline {
         }
         stage('Deploy the Package') {
             steps {
-                // Deploying the package using TomCat Server
+                // Deploying the package using TomCat Servers
                 deploy adapters: [tomcat9(credentialsId: 'tomcat1', path: '', url: 'http://3.110.209.77:8080/')], contextPath: null, war: '**/*.war'
             }
         }
