--- a/jenkinsfile
+++ b/jenkinsfile
@@ -12,7 +12,7 @@ pipeline {
         }
         stage('Test the Package') {
             steps {
-                // Testing the packages using Maven Test
+                // Testing the package using Maven Test
                 sh 'mvn test'
             }
         }
